# llm-lab

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-01-groq-gemini-ollama-providers.md  2026-07-01-langchain-migration.md  2026-07-01-llm-lab-cli.md  2026-07-01-unified-provider-model-selection.md
docs/superpowers/specs/: 2026-07-01-groq-gemini-ollama-providers-design.md  2026-07-01-langchain-migration-design.md  2026-07-01-llm-lab-cli-design.md  2026-07-01-unified-provider-model-selection-design.md
llm_lab/: cli.py  errors.py  models.py
llm_lab/providers/: anthropic.py  base.py  langchain_provider.py  openai.py
tests/: conftest.py  test_cli.py  test_models.py  test_providers.py
