[project]
name = "llm-lab"
version = "0.1.0"
description = "CLI to chat, compare, and benchmark Anthropic and OpenAI models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.9",
    "anthropic>=0.40",
    "openai>=1.60",
    "tenacity>=9.0",
]

[project.scripts]
llm-lab = "llm_lab.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_lab"]
